# Thesis

./: CMakeLists.txt  flag_parser.hpp  main.cpp
app/: CMakeLists.txt  app.cpp  command_dispatcher.hpp  command_handler_defs.h
app/include/: algorithm_state.h  app.h  app_state.h  ast_def.h  command.h  event.h  event_buffer.h  inference_manager_state.h
app/inference/: ast.cpp  ast_def.h  ast_helpers.h  command_handler.h  error.cpp  error.h  inference_manager.cpp  inference_manager.h  source_loc.h  substitution_or_error.h  type_or_error.h  value_or_error.hpp
app/inference/hm_def/: inference_context.cpp  inference_context.h  substitution.cpp  substitution.h  type.cpp  type.h  type_scheme.cpp  type_scheme.h  variable.h
app/inference/lambda_parser/: lambda_parser.cpp  lambda_parser.h  token_buffer.cpp  token_buffer.h
app/inference/temporary/: lambda_parser.cpp  lambda_parser.h
core/: CMakeLists.txt  main.cpp
core-gui/: CMakeLists.txt  main.cpp
core-gui/renderer/: CMakeLists.txt  renderer.cpp
core-gui/renderer/include/: renderer.h
core-gui/ui/: CMakeLists.txt  event_handler_defs.h  ui.cpp  ui_event_dispatcher.hpp
core-gui/ui/include/: ui.h
core-gui/ui/layouts/expression_visualizer/: state.h  window.cpp  window.h
core-gui/ui/layouts/main_window/: event_handler.h  state.h  window.cpp  window.h
core-gui/ui/layouts/step_visualizer/: state.h  window.cpp  window.h
core-gui/ui/misc/: string_to_buffer.hpp
infrastructure/: algorithm_state.h  app_state.h  ast_def.h  command_buffer.h  event.h  inference_manager_state.h  ui_init_struct.h
